students/K3241/Menshenin_Evgenii/LR_6/t4.4.log
earn> db.numbers.deleteMany({});
{ acknowledged: true, deletedCount: 10000 }
learn> for(i = 0; i < 10000; i++) {
...   db.numbers.insertOne({value: i});
... }
{
  acknowledged: true,
  insertedId: ObjectId('683316275b810f068d5473c9')
}
learn> db.numbers.find().sort({$natural: -1}).limit(4);
[
  { _id: ObjectId('683316275b810f068d5473c9'), value: 9999 },
  { _id: ObjectId('683316275b810f068d5473c8'), value: 9998 },
  { _id: ObjectId('683316275b810f068d5473c7'), value: 9997 },
  { _id: ObjectId('683316275b810f068d5473c6'), value: 9996 }
]
learn> var explainResult1 = db.numbers.explain("executionStats").find().sort({$natural: -1}).limit(4);

learn> db.numbers.createIndex({value: 1});
value_1
learn> db.numbers.getIndexes();
[
  { v: 2, key: { _id: 1 }, name: '_id_' },
  { v: 2, key: { value: 1 }, name: 'value_1' }
]
learn> db.numbers.find().sort({$natural: -1}).limit(4);
[
  { _id: ObjectId('683316275b810f068d5473c9'), value: 9999 },
  { _id: ObjectId('683316275b810f068d5473c8'), value: 9998 },
  { _id: ObjectId('683316275b810f068d5473c7'), value: 9997 },
  { _id: ObjectId('683316275b810f068d5473c6'), value: 9996 }
]
learn> var explainResult2 = db.numbers.explain("executionStats").find().sort({$natural: -1}).limit(4);

learn> explainResult2.executionStats.executionTimeMillis
TypeError: Cannot read properties of undefined (reading 'executionTimeMillis')
learn> explainResult2.executionStats

learn> explainResult2.executionStats;

learn> print(explainResult2.executionStats);


learn> print(explainResult2);
{
  explainVersion: '1',
  queryPlanner: {
    namespace: 'learn.numbers',
    parsedQuery: {},
    indexFilterSet: false,
    planCacheShapeHash: '8F2383EE',
    planCacheKey: '7DF350EE',
    optimizationTimeMillis: 0,
    maxIndexedOrSolutionsReached: false,
    maxIndexedAndSolutionsReached: false,
    maxScansToExplodeReached: false,
    prunedSimilarIndexes: false,
    winningPlan: {
      isCached: false,
      stage: 'LIMIT',
      limitAmount: 4,
      inputStage: { stage: 'COLLSCAN', direction: 'backward' }
    },
    rejectedPlans: []
  },
  executionStats: {
    executionSuccess: true,
    nReturned: 4,
    executionTimeMillis: 0,
    totalKeysExamined: 0,
    totalDocsExamined: 4,
    executionStages: {
      isCached: false,
      stage: 'LIMIT',
      nReturned: 4,
      executionTimeMillisEstimate: 0,
      works: 5,
      advanced: 4,
      needTime: 0,
      needYield: 0,
      saveState: 0,
      restoreState: 0,
      isEOF: 1,
      limitAmount: 4,
      inputStage: {
        stage: 'COLLSCAN',
        nReturned: 4,
        executionTimeMillisEstimate: 0,
        works: 4,
        advanced: 4,
        needTime: 0,
        needYield: 0,
        saveState: 0,
        restoreState: 0,
        isEOF: 0,
        direction: 'backward',
        docsExamined: 4
      }
    }
  },
  queryShapeHash: '71C04F100DB2038344A2B08A520E31838D2BDF488D60563B2C7886E847B22DE4',
  command: {
    find: 'numbers',
    filter: {},
    sort: { '$natural': -1 },
    limit: 4,
    '$db': 'learn'
  },
  serverInfo: {
    host: '951b3461d19f',
    port: 27017,
    version: '8.0.4',
    gitVersion: 'bc35ab4305d9920d9d0491c1c9ef9b72383d31f9'
  },
  serverParameters: {
    internalQueryFacetBufferSizeBytes: 104857600,
    internalQueryFacetMaxOutputDocSizeBytes: 104857600,
    internalLookupStageIntermediateDocumentMaxSizeBytes: 104857600,
    internalDocumentSourceGroupMaxMemoryBytes: 104857600,
    internalQueryMaxBlockingSortMemoryUsageBytes: 104857600,
    internalQueryProhibitBlockingMergeOnMongoS: 0,
    internalQueryMaxAddToSetBytes: 104857600,
    internalDocumentSourceSetWindowFieldsMaxMemoryBytes: 104857600,
    internalQueryFrameworkControl: 'trySbeRestricted',
    internalQueryPlannerIgnoreIndexWithCollationForRegex: 1
  },
  ok: 1
}

learn> print(explainResult2.executionStats:);
Uncaught:
SyntaxError: Unexpected token, expected "," (1:35)

> 1 | print(explainResult2.executionStats:);
    |                                    ^
  2 |

learn> print(explainResult2.executionStats);


learn> print(explainResult1);
{
  explainVersion: '1',
  queryPlanner: {
    namespace: 'learn.numbers',
    parsedQuery: {},
    indexFilterSet: false,
    planCacheShapeHash: '8F2383EE',
    planCacheKey: '7DF350EE',
    optimizationTimeMillis: 0,
    maxIndexedOrSolutionsReached: false,
    maxIndexedAndSolutionsReached: false,
    maxScansToExplodeReached: false,
    prunedSimilarIndexes: false,
    winningPlan: {
      isCached: false,
      stage: 'LIMIT',
      limitAmount: 4,
      inputStage: { stage: 'COLLSCAN', direction: 'backward' }
    },
    rejectedPlans: []
  },
  executionStats: {
    executionSuccess: true,
    nReturned: 4,
    executionTimeMillis: 0,
    totalKeysExamined: 0,
    totalDocsExamined: 4,
    executionStages: {
      isCached: false,
      stage: 'LIMIT',
      nReturned: 4,
      executionTimeMillisEstimate: 0,
      works: 5,
      advanced: 4,
      needTime: 0,
      needYield: 0,
      saveState: 0,
      restoreState: 0,
      isEOF: 1,
      limitAmount: 4,
      inputStage: {
        stage: 'COLLSCAN',
        nReturned: 4,
        executionTimeMillisEstimate: 0,
        works: 4,
        advanced: 4,
        needTime: 0,
        needYield: 0,
        saveState: 0,
        restoreState: 0,
        isEOF: 0,
        direction: 'backward',
        docsExamined: 4
      }
    }
  },
  queryShapeHash: '71C04F100DB2038344A2B08A520E31838D2BDF488D60563B2C7886E847B22DE4',
  command: {
    find: 'numbers',
    filter: {},
    sort: { '$natural': -1 },
    limit: 4,
    '$db': 'learn'
  },
  serverInfo: {
    host: '951b3461d19f',
    port: 27017,
    version: '8.0.4',
    gitVersion: 'bc35ab4305d9920d9d0491c1c9ef9b72383d31f9'
  },
  serverParameters: {
    internalQueryFacetBufferSizeBytes: 104857600,
    internalQueryFacetMaxOutputDocSizeBytes: 104857600,
    internalLookupStageIntermediateDocumentMaxSizeBytes: 104857600,
    internalDocumentSourceGroupMaxMemoryBytes: 104857600,
    internalQueryMaxBlockingSortMemoryUsageBytes: 104857600,
    internalQueryProhibitBlockingMergeOnMongoS: 0,
    internalQueryMaxAddToSetBytes: 104857600,
    internalDocumentSourceSetWindowFieldsMaxMemoryBytes: 104857600,
    internalQueryFrameworkControl: 'trySbeRestricted',
    internalQueryPlannerIgnoreIndexWithCollationForRegex: 1
  },
  ok: 1
}

learn> 